[workspace]
members = [
    "agentic_seek_mvp/rust_sentry",
    "agi-service",
    "aigmi",
    "arkhe-axos-instaweb",
    "arkhe-axos-instaweb/arkhe_core",
    "arkhe-axos-instaweb/arkhe_instaweb",
    "arkhe-linux/core/arkhe-cli",
    "arkhe-linux/core/arkhe-constitution",
    "arkhe-linux/core/arkhe-foundry-bridge",
    "arkhe-linux/core/arkhe-manifold",
    "arkhe-linux/core/arkhe-noether",
    "arkhe-linux/core/arkhe-pkg",
    "arkhe-linux/core/arkhe-quantum",
    "arkhe-linux/core/arkhe-thermodynamics",
    "arkhe-linux/core/arkhe-time-crystal",
    "arkhe-linux/core/arkhed",
    "arkhe-security-suite/command/ledger",
    "arkhe-security-suite/command/ledger-distributed/shard-gateway",
    "arkhe-security-suite/command/ledger-distributed/shard-node",
    "arkhe-security-suite/comms/balancer",
    "arkhe-security-suite/comms/qhttp",
    "arkhe-security-suite/comms/qkd",
    "arkhe-security-suite/countermeasures/jamming",
    "arkhe-security-suite/countermeasures/kinetic",
    "arkhe-security-suite/crypto",
    "arkhe-security-suite/detectors/anomaly",
    "arkhe-security-suite/detectors/decoy",
    "arkhe-security-suite/detectors/entanglement_monitor",
    "arkhe-security-suite/fusion/predictive",
    "arkhe-security-suite/governance/controller",
    "arkhe-security-suite/governance/crds",
    "arkhe-security-suite/governance/webhook",
    "arkhe-security-suite/quantum-core",
    "arkhe-security-suite/quantum-storage",
    "arkhe-security-suite/telemetry-collector",
    "arkhe_drone_swarm",
    "arkhe_omni_system/applied_ecosystems/asi_sat",
    "arkhe_omni_system/asi/rust_asi",
    "arkhe_omni_system/constitutive_rust",
    "asi-net/rust/asi-net-crate",
    "asi/merkabah_cy/rust",
    "atomic-interference-processor",
    "cge_alpha_unified",
    "cge_atproto_federation",
    "cge_audio_engine",
    "cge_benchmark",
    "cge_brics_cluster",
    "cge_constitutional_binary_engine",
    "cge_constitutional_echo_engine",
    "cge_constitutional_renderer",
    "cge_constitutional_system",
    "cge_linux_engine",
    "cge_pqc_crypto",
    "cge_sudo",
    "cge_tv_system",
    "cge_universal_engine",
    "cge_www_universal",
    "harmonia",
    "linguagem-soberana-br",
    "merkabah-cy/src/rust",
    "mobile/ar",
    "mobile/contracts",
    "modules/arkhe_ggf/rust",
    "modules/arkhen/rust",
    "modules/rust",
    "ont/native",
    "phase-5/bio_kernel",
    "phi-calculus",
    "ramo-k/rust-asi-wasm",
    "ramo-k/simulator",
    "rust",
    "safecore-9d",
    "sasc-governance",
    "sasc-society",
    "web777_ontology",
]
resolver = "2"

# SECURITY: Global security configurations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false  # Critical: prevent ring panic attacks
panic = "abort"  # Replace panics with aborts
strip = "symbols"

[profile.dev]
overflow-checks = true  # Keep for debugging
panic = "unwind"

[profile.bench]
overflow-checks = false
panic = "abort"
