[workspace]
members = [
    "rust",
    "ont/native",
    "sasc-governance",
    "agi-service",
    "sasc-society",
    "linguagem-soberana-br",
    "atomic-interference-processor",
    "agentic_seek_mvp/rust_sentry",
    "cge_alpha_unified",
    "cge_www_universal",
    "cge_atproto_federation",
    "cge_universal_engine",
    "cge_pqc_crypto",
    "cge_benchmark",
    "phi-calculus",
    "cge_constitutional_renderer",
    "cge_sudo",
    "cge_constitutional_binary_engine",
    "cge_constitutional_echo_engine",
    "cge_linux_engine",
    "cge_audio_engine",
    "cge_brics_cluster",
    "cge_constitutional_system",
    "cge_tv_system",
    "mobile/contracts",
    "mobile/ar",
    "web777_ontology",
    "aigmi",
    "safecore-9d",
    "harmonia",
    "asi-net/rust/asi-net-crate",
    "phase-5/bio_kernel",
    "arkhe_drone_swarm",
    "arkhe_omni_system/constitutive_rust",
    "ramo-k/rust-asi-wasm",
    "ramo-k/simulator",
    "arkhe_omni_system/asi/rust_asi",
    "arkhe_omni_system/applied_ecosystems/asi_sat",
    "arkhe-axos-instaweb",
    "arkhe-axos-instaweb/arkhe_core",
    "arkhe-axos-instaweb/arkhe_instaweb",
    "modules/rust",
    "asi/merkabah_cy/rust",
    "merkabah-cy/src/rust",
    "modules/arkhen/rust",
    "modules/arkhe_ggf/rust",
    "arkhe-linux/core/arkhed",
    "arkhe-linux/core/arkhe-cli",
    "arkhe-linux/core/arkhe-pkg",
    "arkhe-security-suite/quantum-core",
    "arkhe-security-suite/crypto",
    "arkhe-security-suite/detectors/anomaly",
    "arkhe-security-suite/detectors/entanglement_monitor",
    "arkhe-security-suite/detectors/decoy",
    "arkhe-security-suite/comms/qkd",
    "arkhe-security-suite/comms/qhttp",
    "arkhe-security-suite/fusion/predictive",
    "arkhe-security-suite/command/ledger",
    "arkhe-security-suite/countermeasures/kinetic",
    "arkhe-security-suite/countermeasures/jamming",
    "arkhe-security-suite/command/ledger-distributed/shard-gateway",
    "arkhe-security-suite/command/ledger-distributed/shard-node",
    "arkhe-security-suite/comms/balancer",
    "arkhe-security-suite/quantum-storage",
    "arkhe-security-suite/governance/crds",
    "arkhe-security-suite/governance/webhook",
    "arkhe-security-suite/governance/controller",
    "arkhe-security-suite/telemetry-collector",
    "arkhe-linux/core/arkhe-quantum",
    "arkhe-linux/core/arkhe-constitution",
    "arkhe-linux/core/arkhe-thermodynamics",
    "arkhe-linux/core/arkhe-manifold",
    "arkhe-linux/core/arkhe-time-crystal",
    "arkhe-linux/core/arkhe-noether",
    "arkhe-linux/core/arkhe-foundry-bridge",
    "arkhe-linux/core/oloid-core",
    "rust/openclaw_arkhe",
    "rust/arkhe_topology",
    "rust/arkhe_system",
    "core_dmr",
    "arkhe-core/rust",
    "arkhe-os",
    "arkhe-db",
    "arkhe-bridge", "arkhe-kernel",
    "crates/arkhe-tor",
    "arkhe-api/arkhe-api-rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tor-rtcompat = { version = "0.23.0", default-features = false, features = ["tokio", "native-tls"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid", "migrate"] }
arti-client = { version = "0.23.0", default-features = false, features = ["tokio", "native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# SECURITY: Global security configurations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false  # Critical: prevent ring panic attacks
panic = "abort"  # Replace panics with aborts
strip = "symbols"

[profile.dev]
overflow-checks = true  # Keep for debugging
panic = "unwind"

[profile.bench]
overflow-checks = false
panic = "abort"
