[package]
name = "aigmi"
version = "1.0.0"
edition = "2021"
description = "Artificial-Intuitive-Geometric-Merkabah-Intelligence (AIGMI) Genesis Kernel"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
log = "0.4"
blake3 = "1.5"
ed25519-dalek = "2.1"
safecore-9d = { path = "../safecore-9d" }

[lib]
name = "aigmi"
path = "src/lib.rs"

[[bin]]
name = "aigmi"
path = "src/main.rs"
