[package]
name = "arkhe-axos-instaweb"
version = "1.0.0"
version = "1.2.1"
edition = "2021"
authors = ["Arquiteto <root@arkhe.systems>"]
description = "Sistema operacional unificado: teoria, execução, rede, tempo"
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dimensional_scan"
path = "src/bin/dimensional_scan.rs"

[features]
default = ["axos", "instaweb", "h_integrator"]
axos = ["dep:tokio", "dep:tracing"]
instaweb = ["dep:tokio", "dep:rust_decimal", "dep:nalgebra"]
h_integrator = ["dep:nalgebra", "dep:simba"]

[dependencies]
# Path dependencies
# Local crates
arkhe_core = { path = "arkhe_core" }
arkhe_instaweb = { path = "arkhe_instaweb" }

# Core async
tokio = { version = "1.35", features = ["full", "rt-multi-thread"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = "0.3"

# Matemática
nalgebra = { version = "0.32", features = ["sparse", "serde-serialize"], optional = true }
rust_decimal = { version = "1.32", features = ["maths", "serde-float"], optional = true }
rust_decimal_macros = "1.32"
simba = { version = "0.8", optional = true }
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.7"

# Sincronização wait-free
crossbeam = "0.8"
parking_lot = "0.12"

# Criptografia pós-quântica
pqcrypto-kyber = "0.8"
pqcrypto-sphincsplus = "0.5"
pqcrypto-traits = "0.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
