[package]
name = "arkhe-axos-instaweb"
version = "1.0.0"
edition = "2021"
authors = ["Arquiteto <root@arkhe.omega>"]
license = "MIT OR Apache-2.0"
description = "Unified ASI Operating System: Arkhe + Axos + Instaweb"
repository = "https://github.com/arkhe-omega/arkhe-axos-instaweb"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies (using paths for local unintegrated modules or placeholders)
nalgebra = { version = "0.33", features = ["sparse", "serde-serialize"] }
rust_decimal = { version = "1.35", features = ["serde", "maths", "serde-float"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
instaweb-physics = { path = "../instaweb-physics" }
arkhe_core = { path = "arkhe_core" }
arkhe_instaweb = { path = "arkhe_instaweb" }
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal_macros = "1.32"
simba = "0.8"
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.7"
parking_lot = "0.12"
pqcrypto-kyber = "0.8"
pqcrypto-sphincsplus = "0.5"
pqcrypto-traits = "0.3"
pyo3 = { version = "0.20", features = ["extension-module"] }
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"

[features]
default = ["simd", "axos", "instaweb", "h_integrator"]
simd = []
fpga = []   # enables FPGA bitstream generation triggers
verification = [] # enables Coq extraction placeholders
axos = []
instaweb = []
h_integrator = []

[[bin]]
name = "dimensional_scan"
path = "src/bin/dimensional_scan.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
