[package]
name = "arkhe-bridge"
version = "0.5.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "macros"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0"
axum = "0.7"
tracing = "0.1"
arkhe-db = { path = "../arkhe-db" }
arkhe-os = { path = "../arkhe-os" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "arkhe-bridge"
path = "src/main.rs"
