[package]
name = "arkhe-bridge"
version = "0.5.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
anyhow = "1.0"
axum = "0.7"
tracing = { workspace = true }
arkhe-db = { path = "../arkhe-db" }
arkhe-os = { path = "../arkhe-os" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "arkhe-bridge"
path = "src/main.rs"
