[package]
name = "arkhe-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = { workspace = true }
sha2 = "0.10"
serde_arrays = "0.1"
