[package]
name = "arkhe_anyonic_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkhe_anyonic_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
