[package]
name = "arkhe_anyonic_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = "0.4"
arkhe_anyonic_core = { path = "../arkhe_anyonic_core" }
arkhe_diplomatic = { path = "../arkhe_diplomatic" }
arkhe_anyonic_core = { path = "../arkhe_anyonic_core" }
