[package]
name = "cge-alpha-unified"
version = "1.0.0"
edition = "2021"
authors = ["CGE Alpha Constitutional Architects"]
license = "AGPL-3.0-or-later"

[features]
default = ["webgpu", "async", "hardware-agnostic", "byzantine"]
webgpu = ["wgpu", "bytemuck"]
async = ["tokio", "async-trait", "futures"]
hardware-agnostic = ["cranelift", "rspirv", "wasmtime"]
byzantine = []

[dependencies]
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
dashmap = "5.5"
petgraph = { version = "0.6", features = ["serde-1", "graphmap"] }
indexmap = { version = "2.1", features = ["serde"] }
bytes = "1.5"
bincode = "1.3"
prost = "0.12"
tonic = { version = "0.10", optional = true }

# Hardware agnostic backends
cranelift = { version = "0.100", optional = true }
rspirv = { version = "0.10", optional = true }
wasmtime = { version = "11.0", features = ["cranelift"], optional = true }
ash = { version = "0.37", optional = true } # Vulkan bindings

# Byzantine consensus
# pbft-rs = { version = "0.3", optional = true }
# tendermint-rs = { version = "0.26", optional = true }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
