[package]
name = "cge-benchmark"
version = "31.11.0"
edition = "2021"
authors = ["CGE Alpha Benchmark Architects"]
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
futures = "0.3"
cge-pqc-crypto-system = { path = "../cge_pqc_crypto" }
# Mocking these for now since they are not fully compatible with direct usage
# vajra-entropy-monitor = { path = "../vajra-entropy-monitor" }
# karnak-proto = { path = "../karnak-proto" }
# sasc-governance = { path = "../sasc-governance" }

[lib]
path = "src/lib.rs"
