[package]
name = "cge-constitutional-binary-engine"
version = "35.3.0"
edition = "2021"
authors = ["CGE Alpha Binary Execution Architects"]
license = "AGPL-3.0-or-later"

[features]
default = ["elf", "pe", "macho", "pqc-verification", "sandbox-strict"]
elf = []
pe = []
macho = []
pqc-verification = ["pqcrypto-dilithium", "pqcrypto-falcon", "pqcrypto-sphincsplus"]
sandbox-strict = ["libseccomp", "nix", "capctl"]

[dependencies]
# Binary Parsing
goblin = { version = "0.7", features = ["elf64", "pe64", "mach64"] }
object = { version = "0.32", features = ["read", "write", "std"] }

# PQC Verification
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-falcon = { version = "0.4", optional = true }
pqcrypto-sphincsplus = { version = "0.7", optional = true }

# Sandboxing
libseccomp = { version = "0.3", optional = true }
nix = { version = "0.27", features = ["fs", "process", "sched", "user", "signal"], optional = true }
capctl = { version = "0.2", optional = true }

# Utilities
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
parking_lot = "0.12"
bincode = "1.3"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
