[package]
name = "cge-constitutional-echo-engine"
version = "35.3.0"
edition = "2021"
authors = ["CGE Alpha Echo System Architects"]
license = "AGPL-3.0-or-later"

[features]
default = ["human-integration", "sudo-verification", "tmr-36x3", "binary-sandbox"]
human-integration = []
sudo-verification = ["pqcrypto-dilithium"]
tmr-36x3 = []
binary-sandbox = []

[dependencies]
pqcrypto-dilithium = { version = "0.5", optional = true }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
parking_lot = "0.12"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
nix = { version = "0.27", features = ["fs", "ioctl", "term"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
