[package]
name = "cge-constitutional-renderer"
version = "31.11.0"
edition = "2021"
authors = ["CGE Alpha Render Architects"]
license = "AGPL-3.0-or-later"

[features]
default = ["webgpu", "constitutional-timing", "benchmarking"]
webgpu = ["wgpu", "pollster"]
webgl2 = ["glow", "glutin"]
constitutional-timing = []
benchmarking = ["criterion"]

[dependencies]
# Renderização WebGPU
wgpu = { version = "0.19", optional = true, features = ["wgsl"] }
pollster = { version = "0.3", optional = true }
raw-window-handle = "0.6"

# Renderização WebGL2
glow = { version = "0.13", optional = true }
glutin = { version = "0.31", optional = true }

# Matemática e Gráficos
glam = { version = "0.24", features = ["scalar-math", "serde"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-glm = "0.18"
bytemuck = { version = "1.14", features = ["derive"] }

# Timing Constitucional
instant = "0.1"
tokio = { version = "1.35", features = ["full"] }

# Benchmarking
criterion = { version = "0.5", optional = true }

# Shader Compilation
naga = { version = "0.19", features = ["wgsl-in", "wgsl-out"] }

# Constitucional Φ
phi-calculus = { path = "../phi-calculus" }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"

# Logging e Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"

# Parallelism
rayon = "1.8"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_approx_eq = "1.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
