[package]
name = "cge_constitutional_system"
version = "35.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
hex = "0.4"
ed25519-dalek = "2.1"
ring = "0.17"
nix = { version = "0.27", features = ["process", "ptrace", "sched"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
libc = "0.2"
futures = "0.3"
