[package]
name = "cge-pqc-crypto-system"
version = "31.11.0"
edition = "2021"
authors = ["CGE Alpha Cryptographic Architects"]
license = "AGPL-3.0-or-later"

[dependencies]
# NIST PQC Algorithms
pqcrypto-kyber = { version = "0.8" }
pqcrypto-dilithium = { version = "0.5" }
pqcrypto-falcon = { version = "0.4" }
pqcrypto-sphincsplus = { version = "0.7" }
pqcrypto-traits = "0.3"

# Classic Cryptography
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
rsa = { version = "0.9", features = ["serde"] }
p256 = { version = "0.13", features = ["ecdsa", "serde"] }
ecdsa = { version = "0.16", features = ["serde"] }

# Cryptography Primitives
aes-gcm = { version = "0.10" }
chacha20poly1305 = "0.10"
blake3 = "1.5"
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
pbkdf2 = "0.12"

# Key Management
x509-parser = "0.15"
pem = "3.0"

# Secure Randomness
rand = "0.8"
rand_chacha = "0.3"
getrandom = { version = "0.2" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Performance
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
futures = "0.3"
base64 = "0.21"

[lib]
path = "src/lib.rs"
