[package]
name = "cge-tv-system"
version = "31.11.0"
edition = "2021"

[dependencies]
miniquad = "0.4"
gl = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
atomic_float = "1.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
nix = { version = "0.27", features = ["time", "process"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
